# tic-tac-toe

./: .gitignore  Anchor.toml  Cargo.toml  README.md  hardhat.config.ts  package.json  tailwind.config.js
.github/workflows/: build.yaml
contracts/: NFTMarket.sol
core/: Cargo.toml
core/src/: config.rs  game.rs
integration_tests/: Cargo.toml
integration_tests/tests/: tests.rs
integration_tests/tests/fixtures/: fixture.rs  mod.rs  tic_tac_toe_client.rs
integration_tests/tests/tic_tac_toe/: mod.rs  setup_game.rs
programs/hello-world-ncn/: Cargo.toml
programs/hello-world-ncn/src/: lib.rs
programs/hello-world-ncn/src/core/: config.rs  game.rs  mod.rs
programs/hello-world-ncn/src/instructions/: play.rs  setup_game.rs
programs/tic-tac-toe/: Cargo.toml
programs/tic-tac-toe/src/: lib.rs
programs/tic-tac-toe/src/instructions/: play.rs  setup_game.rs
programs/tic-tac-toe/src/state/: game.rs
sdk/: Cargo.toml
sdk/src/: error.rs  lib.rs
src/: App.tsx
tests/: hello-world-ncn.ts
