[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
tic-tac-toe = { workspace = true }
tic-tac-toe-sdk = { workspace = true }
tokio = { workspace = true }
